--- a/openCVLibrary320/src/main/AndroidManifest.xml
+++ b/openCVLibrary320/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="org.opencv"
       android:versionCode="3200"
       android:versionName="3.2.0">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="21" />
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="21" />
 </manifest>
